--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -60,9 +60,7 @@ corresponding simulation results. The validated simulation framework
 has then been used to simulate the different assemblies with different
 thicknesses.
 
-
-
-Then, A good agreement in data and simulation is seen between the
+A good agreement in data and simulation is seen between the
 cluster-size distribution, the position resolution and the energy
 deposition spectrum. The charge sharing model as described in the
 digitiser of the simulations is validated with data. From the
